Update error codes
